--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
 								129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
 								-0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-								<image class="home__blob-img" x="0" y="0" href="assets/images/foto_perfil.png" />
+								<image class="home__blob-img" x="0" y="0" href="public/images/foto_perfil.png" />
 							</g>
 						</svg>
 					</div>
@@ -131,7 +131,7 @@
 			<span class="section__subtitle">My introduction</span>
 
 			<div class="about__container container grid">
-				<img src="assets/images/about_photo.jpg" alt="" class="about__img">
+				<img src="public/images/about_photo.jpg" alt="" class="about__img">
 
 				<div class="about__data">
 					<p class="about__description">
@@ -161,7 +161,7 @@
 					</div>
 
 					<div class="about__buttons">
-						<a download="" href="assets/pdf/Curriculo - Filipe Ferreira Falco.pdf"
+						<a download="" href="public/pdf/Curriculo - Filipe Ferreira Falco.pdf"
 							class="button button--flex">
 							Download CV<i class="uil uil-download-alt button__icon"></i>
 						</a>
@@ -543,7 +543,7 @@
 				<div class="swiper-wrapper">
 					<!-- PORTFOLIO 1 -->
 					<div class="portfolio__content grid swiper-slide">
-						<img src="assets/images/portfolio1.jpg" alt="" class="portfolio__img">
+						<img src="public/images/portfolio1.jpg" alt="" class="portfolio__img">
 
 						<div class="portfolio__data">
 							<h3 class="portfolio__title">Modern Website</h3>
@@ -558,7 +558,7 @@
 
 					<!-- PORTFOLIO 2 -->
 					<div class="portfolio__content grid swiper-slide">
-						<img src="assets/images/portfolio2.jpg" alt="" class="portfolio__img">
+						<img src="public/images/portfolio2.jpg" alt="" class="portfolio__img">
 
 						<div class="portfolio__data">
 							<h3 class="portfolio__title">Brand Design</h3>
@@ -573,7 +573,7 @@
 
 					<!-- PORTFOLIO 3 -->
 					<div class="portfolio__content grid swiper-slide">
-						<img src="assets/images/portfolio3.jpg" alt="" class="portfolio__img">
+						<img src="public/images/portfolio3.jpg" alt="" class="portfolio__img">
 
 						<div class="portfolio__data">
 							<h3 class="portfolio__title">Online Store</h3>
@@ -609,7 +609,7 @@
 						</a>
 					</div>
 
-					<img src="assets/images/project.png" alt="" class="project__img">
+					<img src="public/images/project.png" alt="" class="project__img">
 				</div>
 			</div>
 		</section>
@@ -625,7 +625,7 @@
 					<div class="testimonial__content swiper-slide">
 						<div class="testimonial__data">
 							<div class="testimonial__header">
-								<img src="assets/images/testimonial1.jpg" alt="" class="testimonial__img">
+								<img src="public/images/testimonial1.jpg" alt="" class="testimonial__img">
 
 								<div>
 									<h3 class="testimonial__name">Sara Smith</h3>
@@ -652,7 +652,7 @@
 					<div class="testimonial__content swiper-slide">
 						<div class="testimonial__data">
 							<div class="testimonial__header">
-								<img src="assets/images/testimonial2.jpg" alt="" class="testimonial__img">
+								<img src="public/images/testimonial2.jpg" alt="" class="testimonial__img">
 
 								<div>
 									<h3 class="testimonial__name">Matt Robinson</h3>
@@ -679,7 +679,7 @@
 					<div class="testimonial__content swiper-slide">
 						<div class="testimonial__data">
 							<div class="testimonial__header">
-								<img src="assets/images/testimonial3.jpg" alt="" class="testimonial__img">
+								<img src="public/images/testimonial3.jpg" alt="" class="testimonial__img">
 
 								<div>
 									<h3 class="testimonial__name">Raul Harris</h3>
