feat: added favicon

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/x-icon" href="public/images/favicon.ico" />
 
 	<!-- UNICONS -->
 	<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-
 
 	<!-- SWIPPER CSS -->
 	<link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
